# openclaw-memory

./: .gitignore  03-Agents  2026-03-27.md  2026-03-31.md  2026-04-02.md  2026-04-03.md  AGENTS.md  CONTEXT-MANAGEMENT-RESULTS-2026-04-09.md  CONTEXT-MANAGEMENT-SPEC.md  GOVERNANCE.md  Home.md  MEMORY-SYSTEM-AUDIT-2026-04-09.md  MEMORY.md  OPENCLAW_UPDATE_AUDIT_2026-05-06.md  anthropic-oauth-setup.md  archive-2026-03-24.md  archive-2026-03-25.md  archive-2026-04-05.md  conflict-files-obsidian-git.md  dashboard-roadmap.md  evening-debrief-2026-04-07.md  evening-debrief-2026-04-08.md  excel-tools-research-2026-04-09.md  learnings.md  openclaw-community-research-2026-04-09.md  template-daily.md
.obsidian/: app.json  bookmarks.json  graph.json  hotkeys.json  workspace-mobile.json  workspace.json
.stfolder/: syncthing-folder-e6f0a1.txt
.stfolder.removed-20260426-235035/: syncthing-folder-e6f0a1.txt
.stversions/: .nomedia
00-Inbox/: 00-Inbox.md  AGENTS.md  Home.md  README.md
00-State/: live-state.json
01-Daily/: 01-Daily.md  2026-03-27.md  2026-03-30.md  2026-04-02.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13-session-lifecycle-stabilisierung.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19-stabilization.md  2026-04-19.md  2026-04-20.md  2026-04-21-end-of-day.md  2026-04-21.md  2026-04-22-end-of-day.md  2026-04-22.md  2026-04-24.md  2026-04-25.md  (+12 more)
03-Agents/mcp-setup-skeletons-2026-04-20/03-vault-memory-mcp/: install.sh  pyproject.toml  server.py
(+1600 files in other folders)
